# pyfhircheck

./: .gitignore  LICENSE  README.md  agents.md  plan.md  pyproject.toml
.claude/agents/: fhir-spec.md  perf.md  terminology.md  test-harness.md  validator-arch.md
docs/: github-ci-workflow.yml  parity-roadmap.md
examples/: bundle.json  invalid-patient.json  isik3-basismodul.json  patient-profile.json  pyfhircheck.json  valid-patient.json
examples/conformance/: invalid-patient.case.json  valid-patient.case.json
src/pyfhircheck/: __init__.py  __main__.py  cli.py  config.py  conformance.py  exceptions.py  models.py
src/pyfhircheck/core/: definitions.py  engine.py  fhirpath.py  util.py
src/pyfhircheck/evidence/: __init__.py  drift.py  store.py
src/pyfhircheck/observability/: __init__.py  context.py  logging.py  timing.py
src/pyfhircheck/parity/: __init__.py  hl7_runner.py  rules.py  runner.py
src/pyfhircheck/profiles/: loader.py  package.py  snapshot.py  specification.py
src/pyfhircheck/reporting/: output.py
src/pyfhircheck/rules/: catalog.py  custom.py
src/pyfhircheck/terminology/: resolver.py
tests/: test_cli.py  test_conformance.py  test_errors.py  test_observability.py  test_packaging.py  test_parity.py  test_validator.py
tests/conformance/isik3-basismodul/ISiKAbrechnungsfall/invalid/: Account-AbrechnungsfallAmbulant.case.json
tests/conformance/isik3-basismodul/ISiKAbrechnungsfall/valid/: Account-AbrechnungsfallAmbulant.case.json
tests/conformance/isik3-basismodul/ISiKAngehoeriger/invalid/: RelatedPerson-ISiKAngehoerigerMustermann.case.json
tests/conformance/isik3-basismodul/ISiKAngehoeriger/valid/: RelatedPerson-ISiKAngehoerigerMustermann.case.json
tests/conformance/isik3-basismodul/ISiKBerichtBundle/invalid/: Bundle-ISiKBundle-Example.case.json
tests/conformance/isik3-basismodul/ISiKBerichtBundle/valid/: Bundle-ISiKBundle-Example.case.json
tests/conformance/isik3-basismodul/ISiKBerichtSubSysteme/invalid/: Composition-composition-blutdruck.case.json
tests/conformance/isik3-basismodul/ISiKBerichtSubSysteme/valid/: Composition-composition-blutdruck.case.json
tests/conformance/isik3-basismodul/ISiKCodeSystem/invalid/: ISiKCodeSystem-test.case.json
tests/conformance/isik3-basismodul/ISiKCodeSystem/valid/: ISiKCodeSystem-test.case.json
tests/conformance/isik3-basismodul/ISiKDiagnose/invalid/: Condition-BehandlungsDiagnoseFreitext.case.json
tests/conformance/isik3-basismodul/ISiKDiagnose/valid/: Condition-BehandlungsDiagnoseFreitext.case.json  Condition-Example-condition-ausrufezeichen-primaer.case.json  Condition-Example-condition-ausrufezeichen-sekundaer.case.json  Condition-Example-condition-kreuz-stern-primaer.case.json  (+2 more)
tests/corpus/cases/: neg-array-shape.case.json  neg-bundle-document.case.json  neg-choice-multiple.case.json  neg-coding-shape.case.json  neg-contained-unresolved.case.json  neg-extension-multi-value.case.json  neg-extension-no-url.case.json  neg-invalid-id.case.json  neg-missing-required.case.json  neg-profile-fixed.case.json  neg-profile-mismatch.case.json  neg-profile-pattern.case.json  neg-reference-format.case.json  neg-reference-type.case.json  neg-required-binding.case.json  neg-resourcetype-missing.case.json  neg-resourcetype-unknown.case.json  neg-unknown-element.case.json  neg-wrong-boolean.case.json  neg-wrong-date.case.json  neg-wrong-integer.case.json  pos-valid-bundle.case.json  pos-valid-observation.case.json  pos-valid-patient.case.json
tests/fixtures/isik3-basismodul/: README.md
(+17 files in other folders)
